[gd_scene load_steps=11 format=2]

[ext_resource path="res://Racers/Player/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Game/Assets/Fonts/OpenSans/OpenSans-ExtraBold.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 72
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 48
font_data = ExtResource( 2 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="ColorRect" parent="."]
margin_left = 64.0
margin_top = 64.0
margin_right = 960.0
margin_bottom = 536.0
color = Color( 0.156863, 0.156863, 0.156863, 0.784314 )

[node name="Main" type="Control" parent="BG"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="BG/Main"]
margin_left = 64.0
margin_top = 64.0
margin_right = 832.0
margin_bottom = 152.0
custom_fonts/font = SubResource( 1 )
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="Button" parent="BG/Main"]
margin_left = 64.0
margin_top = 192.0
margin_right = 832.0
margin_bottom = 280.0
custom_fonts/font = SubResource( 2 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="BG/Main"]
margin_left = 64.0
margin_top = 320.0
margin_right = 832.0
margin_bottom = 408.0
custom_fonts/font = SubResource( 3 )
text = "Quit Race"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Control" parent="BG"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsLabel" type="Label" parent="BG/Options"]
margin_right = 896.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 4 )
text = "Options"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="SFX" type="Control" parent="BG/Options"]
margin_top = 133.0
margin_right = 896.0
margin_bottom = 197.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="BG/Options/SFX"]
margin_left = 32.0
margin_top = 8.0
margin_right = 298.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 5 )
text = "SFX Volume"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slider" type="HSlider" parent="BG/Options/SFX"]
margin_left = 320.0
margin_top = 8.0
margin_right = 768.0
margin_bottom = 56.0
min_value = -24.0
max_value = 0.0
value = -24.0
rounded = true
tick_count = 20
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="LineEdit" parent="BG/Options/SFX"]
margin_left = 782.0
margin_right = 864.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 6 )
text = "100"
align = 1
max_length = 3
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="Control" parent="BG/Options"]
margin_top = 213.0
margin_right = 896.0
margin_bottom = 309.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="BG/Options/Music"]
anchor_top = -0.375
anchor_bottom = -0.375
margin_left = 32.0
margin_top = 43.0
margin_right = 292.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 5 )
text = "Music Volume"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slider" type="HSlider" parent="BG/Options/Music"]
anchor_top = -0.375
anchor_bottom = -0.375
margin_left = 320.0
margin_top = 43.0
margin_right = 768.0
margin_bottom = 91.0
min_value = -48.0
max_value = -12.0
value = -12.0
rounded = true
tick_count = 20
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="LineEdit" parent="BG/Options/Music"]
anchor_top = -0.375
anchor_bottom = -0.375
margin_left = 782.0
margin_top = 36.0
margin_right = 864.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 7 )
text = "100"
align = 1
max_length = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ApplyButton" type="Button" parent="BG/Options"]
margin_left = 64.0
margin_top = 320.0
margin_right = 432.0
margin_bottom = 408.0
custom_fonts/font = SubResource( 8 )
text = "Apply"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="Button" parent="BG/Options"]
margin_left = 464.0
margin_top = 320.0
margin_right = 832.0
margin_bottom = 408.0
custom_fonts/font = SubResource( 8 )
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="BG/Main/ResumeButton" to="." method="_toggle_pause"]
[connection signal="pressed" from="BG/Main/OptionsButton" to="." method="_open_options_menu"]
[connection signal="pressed" from="BG/Main/QuitButton" to="." method="_quit_race"]
[connection signal="value_changed" from="BG/Options/SFX/Slider" to="." method="_update_sfx_sound_values"]
[connection signal="text_entered" from="BG/Options/SFX/Level" to="." method="_update_sfx_sound_values"]
[connection signal="value_changed" from="BG/Options/Music/Slider" to="." method="_update_music_sound_values"]
[connection signal="text_entered" from="BG/Options/Music/Level" to="." method="_update_music_sound_values"]
[connection signal="pressed" from="BG/Options/ApplyButton" to="." method="_apply_settings"]
[connection signal="pressed" from="BG/Options/CloseButton" to="." method="_close_options_menu"]
